20220718:
 * fixed local_env_keys in get-python3
 * added new_env_only_keys to meta to specify which env to keep
 * fixed problem with adding tags from the selected script during caching

20220713:
 * added local_env_keys to meta
 * added "env" dict to os_info

20220712:
 * major script refactoring to support cache tags update from deps
 * fixed version min/max propagations in deps
 * improvements to support tags from deps

20220708:
 * various fixes to handle versions (min/max/default)
 * various fixes to avoid contamination of ENV from other scripts

20220705:
 * fixes for remembered selections
 * added --skip-remembered-selections to "cm run script"

20220704:
 * fixed a bug with searching for scripts with variations
 * added the possibilty to update deps from pre/post processing
 * added --extra-cache-tags and --name for "cm run script"
 * added prototype of selection caching

20220701:
 * added dummy "cm test script"
 * added "--env" to "cm show cache" to show env and state
 * added "cm show cache"

20220629:
 * added "detect_version_using_script" in script used to detect python packages
 * major fix to properly support multiple scripts with the same tags, caching, selection, etc
 * fixed a bug in version comparison (converting string to int)
 * added recording of "version" to cache meta

20220628:
 * fixed local_env with deps

20220623:
 * important update of versions logic

20220621:
 * added support for --quiet
 * changed CM_NEED_VERSION to CM_VERSION
 * added CM_VERSION_MIN, CM_VERSION_MAX
 * added cm compare_versions utils --version1=... --version2=...
 * added support to detect min/max/correct versions

20220617
 * fixed logic to handle variations (-_): https://github.com/mlcommons/ck/issues/243

20220616:
 * changed "cached" to "cache" automation

20220615:
 * major update of script (remove parallel env/new_env and state/new_state).
   keep global env & state and detect changes automatically
 * major simplification of "script"